<resources>
    <string name="app_name">Ganesh Mani Astrologer</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="myprofile">My Profile</string>
    <string name="mybookings">My Bookings</string>
    <string name="chathistory">Chat History</string>
    <string name="callhistory">Call History</string>
    <string name="customersupport">Customer Support</string>
    <string name="settings">Settings</string>
    <string name="I_AGREE">I agree to the</string>

    <string name="aboutus">About Us</string>
    <string name="faq">FAQ</string>
    <string name="rateapp">Rate Application</string>
    <string name="shareapp">Share Application</string>
    <string name="notification">Notification</string>
    <string name="remedy">Remedy</string>
    <string name="logout">Logout</string>
    <string name="hint_place">Delhi</string>
    <string name="hint_time">12:05 AM</string>
    <string name="hint_date">28-Feb-1995</string>
    <string name="hint_phone">+91 123 456 7890</string>
    <string name="hint_profession">Businessman</string>
    <string name="hint_maritalStatus">Married</string>
    <string name="dummy_text_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s</string>
    <string name="hint_name">Amit Aggarwal</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_other">Other</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="hint_rupees">₹ 500</string>
    <string name="hint_view">21.1k View</string>
    <string name="hint_notification">New Offers only for you!</string>
    <string name="hint_hour">1 hr ago</string>
    <string name="hint_new_indian">New (Indian)</string>
    <string name="hint_order_id_">Order Id: 123456</string>
    <string name="hint_name_">Name: Ravi Sharma</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="hindi">Hindi</string>
    <string name="name">Name</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="dob">DOB</string>
    <string name="time_of_birth">Time of birth</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="occupation">Occupation</string>
    <string name="marital_status">Marital Status</string>
    <string name="topic_of_consultation">Topic of Consultation</string>
    <string name="to">to</string>
    <string name="AM">AM</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="phone_no">Phone No.</string>
    <string name="email_id">Email id</string>
    <string name="dummyText">Text</string>
    <string name="bank_details">Bank Details</string>
    <!--    <string name="manage_bookings">Manage Bookings</string>-->
    <string name="manage_bookings">Change &amp; Recover Password</string>
    <string name="location_details">Location Details</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="issue_description">Issue description</string>
    <string name="submit">Submit</string>
    <string name="promotional_chat">Promotional Chat</string>
    <string name="promotional_call">Promotional Call</string>
    <string name="choose_the_reason_for_cancel_order">Choose The Reason For Cancel Order</string>
    <string name="reason">Reason</string>
    <string name="or">or</string>
    <string name="write_your_reason_for_cancel_order">Write Your Reason For Cancel Order</string>
    <string name="give_your_reason">Give your reason</string>
    <string name="terms_and_conditions_apply">Terms and Conditions apply.</string>
    <string name="request_cancelled">Request Cancelled</string>
    <string name="the_audio_call_request_of">The audio Call Request </string>
    <string name="has_been_successfully_canceled"> has been Successfully canceled.</string>
    <string name="ok">OK</string>
    <string name="choose_language">Choose Languages</string>
    <string name="english">English</string>
    <string name="skills">Skills</string>
    <string name="choose_the_expertise">Choose the expertise</string>
    <string name="expertise">Expertise</string>
    <string name="experience_yrs">Experience (yrs)</string>
    <string name="rating_and_reviews">Rating &amp; Reviews</string>
    <string name="view_all">View All</string>
    <string name="pin_selected_reviews">Pin Selected Reviews</string>
    <string name="done">Done</string>
    <string name="total_earning">Total Earning: </string>
    <string name="withdrawal">Withdrawal Amount: </string>
    <string name="remaining">Current Balence: </string>
    <string name="transactions_history">Transaction History</string>
    <string name="withdrawl_history">Withdrawal History</string>
    <string name="daily">Daily</string>
    <string name="payment_type">Payment type</string>
    <string name="confirmation_on_bookings">Confirmation on Bookings</string>
    <string name="earning">Earning</string>
    <string name="select_rating_reviews">Select Rating &amp; Reviews</string>
    <string name="post_profile">Post Profile</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="call_request_details">Call Request Details</string>
    <string name="call_request">Call Request</string>
    <string name="chat_request_details">Chat Request Details</string>
    <string name="chat_request">Chat Request</string>
    <string name="calendar_schedule">Calendar Schedule</string>
    <string name="fixed_session">Fixed Session</string>
    <string name="report">Report</string>
    <string name="start_chat">Start Chat</string>
    <string name="call_booking_details">Call Booking Details</string>
    <string name="send_report">Send Report</string>
    <string name="you_can_decline_the_service_request_of_a_customer_within_15_mins_of_accepting_the_request">You can decline the service request of a customer within 15 minutes of accepting the request</string>
    <string name="report_request">Report Request</string>
    <string name="type_report">Type Report</string>
    <string name="submit_report">Submit Report</string>
    <string name="cancellation_by_user">Cancellation by User</string>
    <string name="cancelled">Cancelled</string>
    <string name="online_time">Online Time 02:53 AM</string>
    <string name="online">Online</string>
    <string name="type">Type......</string>
    <string name="intake_form">Intake Form</string>
    <string name="live_topic">Live Topic</string>
    <string name="match_making">match making</string>
    <string name="match_making_c">Match Making</string>
    <string name="enter_topic_for_live">Enter Topic for Live</string>
    <string name="go_live">Go Live</string>
    <string name="live">LIVE</string>
    <string name="topic">Topic</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holders_name">Account Holder’s Name</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="branch">Branch</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="my_bookings">My Bookings</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="chat_history">Chat History</string>
    <string name="order_id">Order Id:</string>
    <string name="products">Products</string>
    <string name="start_call">Start Call</string>
    <string name="hint_fixedSession">Fixed Session: 30 min</string>
    <string name="language_known">Language Known</string>
    <string name="hint_time_count">00:00</string>
    <string name="please_provide_your_details">Please Provide your details</string>
    <string name="dob_boy_girl">DOB (boy and girl)</string>
    <string name="place_of_birth_boy_girl">Place of birth (boy and girl)</string>
    <string name="time_of_birth_boy_girl">Time of birth (boy and girl)</string>
    <string name="occupation_boy_girl">Occupation (boy and girl)</string>
    <string name="marital_status_boy_girl">Marital Status (boy and girl)</string>
    <string name="hint_account_number">123456789123456</string>
    <string name="hint_ifsccode">ABCD12345EF</string>
    <string name="no_data_found">No data found!</string>
    <string name="hint_date_time">11 Nov 22, 12:30 PM</string>
    <string name="hint_duration">Duration: 30 minutes (12:30 PM-01:00 PM)</string>
    <string name="hint_rate">Rate: 70.0/minute</string>
    <string name="hint_1">1</string>
    <string name="feedback_">Feedback:</string>
    <string name="status">Status</string>
    <string name="suggest_remedy">Suggest Remedy</string>
    <string name="suggest_remedy_">Suggest remedy...</string>
    <string name="refund_amount">Refund Amount</string>
    <string name="message_">Message...</string>
    <string name="hint_ratingcount">2/10</string>
    <string name="choose_skills">Choose Skills</string>
    <string name="add_new_pin">Add New Pin</string>
    <string name="choose_the_experience">Choose Experience</string>
    <string-array name="transactionhistory_entries">
        <item>All</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="title_activity_suggest_remedy_chat">SuggestRemedyChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_new_notification">No new notification!</string>
    <string name="back">Back</string>
    <string name="api_key">AIzaSyA2bSrjroNJthADBBC0l53d08wbx34iZvc</string>
    <string name="app_id">3a39ba628d2745c9b6fff7fd5750e171</string>
    <string name="agora_app_id">3a39ba628d2745c9b6fff7fd5750e171</string>
</resources>