<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="bottom"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@drawable/bottomsheet_background"
        app:behavior_hideable="false"
        style="@style/CustomBottomSheet"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:padding="@dimen/_10sdp"
                    android:id="@+id/ivCross"
                    android:src="@drawable/ic_cross_round"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/request_cancelled"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />



            </LinearLayout>


            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/tvTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/the_audio_call_request_of"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_50sdp"
                    android:textColor="@color/theme_purple"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:text="@string/ok" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>