<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_purple"
            >

            <LinearLayout
                android:id="@+id/ll_user"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_imgUser"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/user_image_place_holder"
                    app:civ_border_color="@color/theme_purple"
                    app:civ_border_width="@dimen/_2sdp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:id="@+id/head"
                android:layout_toEndOf="@id/ll_user">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Username"

                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUserName"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="example@gmail.com"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_myprofile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_profile"
                    android:gravity="left"
                    android:text="@string/myprofile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                   android:fontFamily="@font/roboto_medium" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_mybookings"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_orders"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_myorders"
                    app:tint="@color/theme_purple" />

                <TextView
                    android:id="@+id/tv_myorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_orders"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="left"
                    android:text="@string/mybookings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_chatHistory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagewallet"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_chat_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/imagewallet"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="left"
                    android:text="@string/chathistory"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_callHistory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_callhistory"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_call_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_callhistory"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="left"
                    android:text="@string/callhistory"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_customersupport"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_customersupport"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_customersupport"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_customersupport"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="left"
                    android:text="@string/customersupport"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_settings"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_settings"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_settings"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="left"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_faq"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_faq"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_faq"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_faq"
                    android:gravity="left"
                    android:text="@string/faq"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_medium" />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_aboutus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_aboutus"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_aboutus"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_aboutus"
                    android:gravity="left"
                    android:text="@string/aboutus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_medium"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_rateapp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_rateapp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    app:tint="@color/theme_purple"
                    android:src="@drawable/ic_rateapp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_rateapp"
                    android:gravity="left"
                    android:text="@string/rateapp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_medium" />


            </RelativeLayout>
            <RelativeLayout
            android:id="@+id/rl_shareapp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image_shareapp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:tint="@color/theme_purple"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_shareapp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_shareapp"
                    android:gravity="left"
                    android:text="@string/shareapp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_medium" />


        </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_logout"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_logout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/image_logout"
                    android:gravity="left"
                    android:text="@string/logout"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_medium"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
